# test

./: bubble_map_test.db-shm  bubble_map_test.db-wal  dashboard_test.db  dashboard_test.db-shm  dashboard_test.db-wal  demo.py  demo_chat.py  demo_chat1.py  demo_chat2.py  demo_chat3.py  demo_chat4.py  game.py  life.db-shm  life.db-wal  load_test.py  min_app.py  perf_test.py  poll.db  poll.db-shm  poll.db-wal  pyproject.toml  todo  ui.py  ui_map.py  vote.py
docs/: index.html
src/md_web/: App.py  Html.py  Tunnel.py  __init__.py  app.py  db.py  html.py  server.py  sse.py
src/md_web/ui/: __init__.py  bar_chart.py  base.py  bubble_map.py  heatmap.py  layout.py  line_chart.py  map_data.py  scatter_plot.py  stat_card.py
src/md_web/ui/css/: style.css  ui.css  ui_bak.css
static/: style.css
