[project]
name = "md-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Deufel", email = "MDeufel13@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "brotli>=1.2.0",
    "granian>=2.7.3",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiohttp>=3.13.5",
]


